src/main/default/objects/narrate_LogEvent__e/narrate_LogEvent__e.object-meta.xml
<CustomObject>
    <description>Log Events</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>