src/main/default/objects/narrate_LogEvent__e/fields/narrate_Class__c.field-meta.xml
<CustomField>
    <fullName>narrate_Class__c</fullName>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>