src/main/default/objects/narrate_LogEvent__e/fields/narrate_Context__c.field-meta.xml
<CustomField>
    <fullName>narrate_Context__c</fullName>
    <label>Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>