src/main/default/objects/narrate_LogEvent__e/fields/narrate_Message__c.field-meta.xml
<CustomField>
    <fullName>narrate_Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>