src/main/default/objects/narrate_LogEvent__e/fields/narrate_Method__c.field-meta.xml
<CustomField>
    <fullName>narrate_Method__c</fullName>
    <label>Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>