src/main/default/objects/narrate_LogEvent__e/fields/narrate_Request__c.field-meta.xml
<CustomField>
    <fullName>narrate_Request__c</fullName>
    <label>Request</label>
    <length>80</length>
    <type>Text</type>
</CustomField>