src/main/default/objects/narrate_LogEvent__e/fields/narrate_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>narrate_Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>