src/main/default/objects/narrate_LogEvent__e/fields/narrate_User__c.field-meta.xml
<CustomField>
    <fullName>narrate_User__c</fullName>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>